# sentiment-analysis-bert

./: .env.sample  .gitignore  README.md  collect_additional_tweets.py  make_data.sh  model.py  pyproject.toml  train.py
config/: config.yaml
data/: split_data.py
utils/: dataset.py  trainer.py
