[tool.poetry]
name = "sentiment-analysis-bert"
version = "0.1.0"
description = ""
authors = ["nakatuba <nakatuba0626@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fugashi = "^1.1.1"
ipadic = "^1.0.0"
pandas = "^1.3.3"
scikit-learn = "^0.24.2"
torch = "^1.9.1"
torchtext = "^0.10.1"
transformers = "^4.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
